Fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -5,17 +5,16 @@
 
 html,
 body {
-  display: flex;
   padding: 0;
   margin: 0;
   width: 100%;
   height: 100%;
   font-family: "Inter", sans-serif;
+  overflow-x: hidden;
 }
 
 h1 {
   color: white;
-  font-size: 40px;
   font-family: Norse;
   font-size: 5rem;
 }
@@ -41,6 +40,12 @@ fieldset {
   gap: 5px;
 }
 
+.main {
+  display: flex;
+  justify-content: center;
+  width: 100vw;
+}
+
 .container {
   padding: 4rem;
   background-color: white;
@@ -59,7 +64,8 @@ fieldset {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 60vw;
+  height: 100vh;
 }
 
 .bg-transparent {
@@ -74,7 +80,7 @@ fieldset {
 }
 
 .bg-transparent img {
-  width: 100px;
+  max-width: 100px;
 }
 
 .right-page {
@@ -125,4 +131,14 @@ fieldset {
   color: rgb(68, 68, 68);
   font-weight: 200;
   font-size: 0.8rem;
+}
+
+@media (max-width: 850px) {
+  .main {
+    flex-direction: column;
+  }
+  .left-page {
+    width: 100vw;
+    height: 20rem;
+  }
 }
